# plot_your_path

./: .cruft.json  .env.example  .gitignore  README.md  SYSTEM_SPEC.md  biome.json  capture.py  package.json  pyproject.toml
.agent/.clinerules/: 00-global.md  10-frontend.md  20-backend.md  30-testing.md
.agent/plans/: 01-job_capture_implementation.md  02-job_capture_mvf.md  03-scraper-resilience.md  example_v01.md
.agent/prompts/: example.md
.agent/specs/: example.md  future_phases_roadmap.md  mvp_phase1_job_capture.md
config/: llm.json  scraping.json
src/backend/: config.py  database.py  init_db.py  main.py
src/backend/models/: __init__.py  company.py  role.py  role_skill.py  skill.py
src/backend/routers/: jobs.py
src/backend/schemas/: __init__.py  company.py  job.py  skill.py
src/backend/services/: __init__.py  llm_service.py  scraper.py  skill_extractor.py
src/backend/utils/: __init__.py  file_storage.py  slug.py
tests/backend/: test_config.py  test_jobs_api.py  test_llm_service.py  test_schemas.py  test_scraper.py  test_skill_extractor.py  test_utils.py
